tests/static/pass/tent-def/2-a.c
extern int x[];

int main(void) {
      return x[0];
}
